# sdcpy-map

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: render.yml
branding/: logo_prompt.md
docs/: algorithm_open_questions.md  four_layer_map_interpretation.md
examples/: public_enso_sst_demo.py
reports/: _quarto.yml  custom.css  index.ipynb
src/sdcpy_map/: __init__.py  cli.py  config.py  datasets.py  layers.py  plotting.py
tests/: test_cli.py  test_config.py  test_datasets.py  test_io.py  test_layers.py  test_plotting.py
